--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -33,9 +33,12 @@ https://github.com/elastic/beats/compare/v6.7.2...6.8[Check the HEAD diff]
 
 *Affecting all Beats*
 
+- Fixed a memory leak when using the add_process_metadata processor under Windows. {pull}12100[12100]
+
 *Auditbeat*
 
 - Package dataset: Log error when Homebrew is not installed. {pull}11667[11667]
+- Process dataset: Fixed a memory leak under Windows. {pull}12100[12100]
 
 *Filebeat*
 
@@ -49,6 +52,8 @@ https://github.com/elastic/beats/compare/v6.7.2...6.8[Check the HEAD diff]
 *Metricbeat*
 
 *Packetbeat*
+
+- Fixed a memory leak when using process monitoring under Windows. {pull}12100[12100]
 
 *Winlogbeat*
 
