Fix various memory leaks under Windows (#12100)
A function in go-sysinfo used under Windows to split a command-line into arguments was leaking memory.

This code was used in various places:

add_process_metadata processor. (enabled by default in all Beats)
Packetbeat's process monitor. (disabled by default).
Auditbeat's system/process metricset.
This PR updates vendored go-sysinfo to the most recent version, which fixes the leak.

(cherry picked from commit a5b3f0acb1dc51f1d119431d0b05fd73e2318b85)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -30,9 +30,12 @@ https://github.com/elastic/beats/compare/v7.0.0...7.1[Check the HEAD diff]
 
 *Affecting all Beats*
 
+- Fixed a memory leak when using the add_process_metadata processor under Windows. {pull}12100[12100]
+
 *Auditbeat*
 
 - Package dataset: Log error when Homebrew is not installed. {pull}11667[11667]
+- Process dataset: Fixed a memory leak under Windows. {pull}12100[12100]
 
 *Filebeat*
 
@@ -45,6 +48,8 @@ https://github.com/elastic/beats/compare/v7.0.0...7.1[Check the HEAD diff]
 - Update documentation with cloudwatch:ListMetrics permission. {pull}11987[11987]
 
 *Packetbeat*
+
+- Fixed a memory leak when using process monitoring under Windows. {pull}12100[12100]
 
 *Winlogbeat*
 
