--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -11839,7 +11839,14 @@ Fields from the palo_alto logs.
 
 
 
-*`palo_alto.ruleset`*::
+[float]
+== pan_os fields
+
+Fields for the Palo Alto Networks PAN-OS logs.
+
+
+
+*`palo_alto.pan_os.ruleset`*::
 +
 --
 type: keyword
@@ -11856,7 +11863,7 @@ Fields to extend the top-level source object.
 
 
 
-*`palo_alto.source.zone`*::
+*`palo_alto.pan_os.source.zone`*::
 +
 --
 type: keyword
@@ -11866,7 +11873,7 @@ Source zone for this session.
 
 --
 
-*`palo_alto.source.interface`*::
+*`palo_alto.pan_os.source.interface`*::
 +
 --
 type: keyword
@@ -11883,7 +11890,7 @@ Post-NAT source address, if source NAT is performed.
 
 
 
-*`palo_alto.source.nat.ip`*::
+*`palo_alto.pan_os.source.nat.ip`*::
 +
 --
 type: ip
@@ -11893,7 +11900,7 @@ Post-NAT source IP.
 
 --
 
-*`palo_alto.source.nat.port`*::
+*`palo_alto.pan_os.source.nat.port`*::
 +
 --
 type: long
@@ -11910,7 +11917,7 @@ Fields to extend the top-level destination object.
 
 
 
-*`palo_alto.destination.zone`*::
+*`palo_alto.pan_os.destination.zone`*::
 +
 --
 type: keyword
@@ -11920,7 +11927,7 @@ Destination zone for this session.
 
 --
 
-*`palo_alto.destination.interface`*::
+*`palo_alto.pan_os.destination.interface`*::
 +
 --
 type: keyword
@@ -11937,7 +11944,7 @@ Post-NAT destination address, if destination NAT is performed.
 
 
 
-*`palo_alto.destination.nat.ip`*::
+*`palo_alto.pan_os.destination.nat.ip`*::
 +
 --
 type: ip
@@ -11947,7 +11954,7 @@ Post-NAT destination IP.
 
 --
 
-*`palo_alto.destination.nat.port`*::
+*`palo_alto.pan_os.destination.nat.port`*::
 +
 --
 type: long
@@ -11964,7 +11971,7 @@ Fields to extend the top-level network object.
 
 
 
-*`palo_alto.network.pcap_id`*::
+*`palo_alto.pan_os.network.pcap_id`*::
 +
 --
 type: keyword
@@ -11975,7 +11982,7 @@ Packet capture ID for a threat.
 --
 
 
-*`palo_alto.network.nat.community_id`*::
+*`palo_alto.pan_os.network.nat.community_id`*::
 +
 --
 type: keyword
@@ -11992,7 +11999,7 @@ Fields to extend the top-level file object.
 
 
 
-*`palo_alto.file.hash`*::
+*`palo_alto.pan_os.file.hash`*::
 +
 --
 type: keyword
@@ -12009,7 +12016,7 @@ Fields to extend the top-level url object.
 
 
 
-*`palo_alto.url.category`*::
+*`palo_alto.pan_os.url.category`*::
 +
 --
 type: keyword
@@ -12019,7 +12026,7 @@ For threat URLs, it's the URL category. For WildFire, the verdict on the file an
 
 --
 
-*`palo_alto.flow_id`*::
+*`palo_alto.pan_os.flow_id`*::
 +
 --
 type: keyword
@@ -12029,7 +12036,7 @@ Internal numeric identifier for each session.
 
 --
 
-*`palo_alto.sequence_number`*::
+*`palo_alto.pan_os.sequence_number`*::
 +
 --
 type: long
@@ -12039,7 +12046,7 @@ Log entry identifier that is incremented sequentially. Unique for each log type.
 
 --
 
-*`palo_alto.threat_file_or_url`*::
+*`palo_alto.pan_os.threat_file_or_url`*::
 +
 --
 type: keyword
@@ -12049,7 +12056,7 @@ URL or file name for a threat.
 
 --
 
-*`palo_alto.threat_id`*::
+*`palo_alto.pan_os.threat_id`*::
 +
 --
 type: keyword
