Fix goroutine leak on initialization failures of log input (#12125)
Outlets are created during log input initialization, and if it
fails they were never freed. Handle this case.

(cherry picked from commit f2473d258b9c2c9d47d7a3bc5905f4c80ad4077f)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -39,6 +39,8 @@ https://github.com/elastic/beats/compare/v7.0.0...7.1[Check the HEAD diff]
 
 *Filebeat*
 
+- Fix goroutine leak caused on initialization failures of log input. {pull}12125[12125]
+
 *Heartbeat*
 
 *Journalbeat*
