PR feedback. Remove module.yml & note about MacOS

--- a/filebeat/docs/modules/rabbitmq.asciidoc
+++ b/filebeat/docs/modules/rabbitmq.asciidoc
@@ -17,7 +17,7 @@ include::../include/what-happens.asciidoc[]
 
 Parses https://www.rabbitmq.com/logging.html[single file format] introduced in 3.7.0.
 
-Tested with version 3.7.14 on MacOS 10.14.4.
+Tested with version 3.7.14.
 
 include::../include/running-modules.asciidoc[]
 
