--- a/x-pack/filebeat/module/rabbitmq/_meta/docs.asciidoc
+++ b/x-pack/filebeat/module/rabbitmq/_meta/docs.asciidoc
@@ -47,10 +47,13 @@ include::../include/config-option-intro.asciidoc[]
 
 include::../include/var-paths.asciidoc[]
 
+:default_convert_timezone: true
+
 include::../include/var-convert-timezone.asciidoc[]
 
 :has-dashboards!:
 
 :fileset_ex!:
+:default_convert_timezone!:
 
 :modulename!:
