WIP of adding windows memory data

--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -4636,6 +4636,43 @@ Total memory usage.
 --
 
 [float]
+== windows fields
+
+Windows memory statistics 
+
+
+
+*`docker.memory.windows.commit`*::
++
+--
+type: long
+
+Committed bytes
+
+
+--
+
+*`docker.memory.windows.commit_peak`*::
++
+--
+type: long
+
+Peak committed bytes
+
+
+--
+
+*`docker.memory.windows.private_working_set`*::
++
+--
+type: long
+
+private working set
+
+
+--
+
+[float]
 == network fields
 
 Network metrics.
