--- a/x-pack/metricbeat/module/aws/_meta/docs.asciidoc
+++ b/x-pack/metricbeat/module/aws/_meta/docs.asciidoc
@@ -66,6 +66,10 @@ metricbeat.modules:
     - us-east-1
 ----
 
+The aws module comes with a predefined dashboard. For example:
+
+image::./images/metricbeat-aws-overview.png[]
+
 [float]
 == Metricsets
 
