Adding beats module with stats metricset

--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -16,6 +16,7 @@ grouped in the following categories:
 * <<exported-fields-apache>>
 * <<exported-fields-aws>>
 * <<exported-fields-beat-common>>
+* <<exported-fields-beat>>
 * <<exported-fields-ceph>>
 * <<exported-fields-cloud>>
 * <<exported-fields-common>>
@@ -1567,6 +1568,231 @@ alias to: agent.hostname
 type: keyword
 
 Time series instance id
+
+--
+
+[[exported-fields-beats]]
+== Beats fields
+
+Beats module
+
+
+
+[float]
+== beats fields
+
+
+
+
+*`beats.id`*::
++
+--
+type: keyword
+
+Beat ID.
+
+
+--
+
+*`beats.type`*::
++
+--
+type: keyword
+
+Beat type.
+
+
+--
+
+[float]
+== stats fields
+
+Beat stats
+
+
+
+*`beats.stats.uptime.ms`*::
++
+--
+type: long
+
+Beat uptime
+
+
+--
+
+*`beats.stats.runtime.goroutines`*::
++
+--
+type: long
+
+Number of goroutines running in Beat
+
+
+--
+
+[float]
+== libbeat fields
+
+Fields common to all Beats
+
+
+
+[float]
+== output fields
+
+Output stats
+
+
+
+*`beats.stats.libbeat.output.type`*::
++
+--
+type: keyword
+
+Type of output
+
+
+--
+
+[float]
+== events fields
+
+Event counters
+
+
+
+*`beats.stats.libbeat.output.events.acked`*::
++
+--
+type: long
+
+Number of events acknowledged
+
+
+--
+
+*`beats.stats.libbeat.output.events.active`*::
++
+--
+type: long
+
+Number of active events
+
+
+--
+
+*`beats.stats.libbeat.output.events.batches`*::
++
+--
+type: long
+
+Number of event batches
+
+
+--
+
+*`beats.stats.libbeat.output.events.dropped`*::
++
+--
+type: long
+
+Number of events dropped
+
+
+--
+
+*`beats.stats.libbeat.output.events.duplicates`*::
++
+--
+type: long
+
+Number of events duplicated
+
+
+--
+
+*`beats.stats.libbeat.output.events.failed`*::
++
+--
+type: long
+
+Number of events failed
+
+
+--
+
+*`beats.stats.libbeat.output.events.toomany`*::
++
+--
+type: long
+
+Number of too many events
+
+
+--
+
+*`beats.stats.libbeat.output.events.total`*::
++
+--
+type: long
+
+Total number of events
+
+
+--
+
+[float]
+== read fields
+
+Read stats
+
+
+
+*`beats.stats.libbeat.output.read.bytes`*::
++
+--
+type: long
+
+Number of bytes read
+
+
+--
+
+*`beats.stats.libbeat.output.read.errors`*::
++
+--
+type: long
+
+Number of read errors
+
+
+--
+
+[float]
+== write fields
+
+Write stats
+
+
+
+*`beats.stats.libbeat.output.write.bytes`*::
++
+--
+type: long
+
+Number of bytes written
+
+
+--
+
+*`beats.stats.libbeat.output.write.errors`*::
++
+--
+type: long
+
+Number of write errors
+
 
 --
 
@@ -19673,7 +19899,7 @@ The number of requests to read a row based on a key.
 --
 type: long
 
-The number of requests to read the last key in an index. 
+The number of requests to read the last key in an index.
 
 
 --
@@ -19703,7 +19929,7 @@ The number of requests to read the previous row in key order.
 --
 type: long
 
-The number of requests to read a row based on a fixed position. 
+The number of requests to read a row based on a fixed position.
 
 
 --
@@ -19713,7 +19939,7 @@ The number of requests to read a row based on a fixed position.
 --
 type: long
 
-The number of requests to read the next row in the data file. 
+The number of requests to read the next row in the data file.
 
 
 --
@@ -19811,7 +20037,7 @@ The progress of an operation to warm up the InnoDB buffer pool by reading in a s
 --
 type: long
 
-The total number of bytes in the InnoDB buffer pool containing data. 
+The total number of bytes in the InnoDB buffer pool containing data.
 
 
 --
@@ -22698,7 +22924,7 @@ type: long
 
 format: bytes
 
-Used memory by the Lua engine.        
+Used memory by the Lua engine.
 
 
 --
@@ -22710,7 +22936,7 @@ type: long
 
 format: bytes
 
-The size in bytes of the dataset 
+The size in bytes of the dataset
 
 
 --
@@ -22955,7 +23181,7 @@ type: long
 
 format: bytes
 
-The size in bytes of copy-on-write allocations during the last RBD save operation                
+The size in bytes of copy-on-write allocations during the last RBD save operation
 
 
 --
@@ -23084,7 +23310,7 @@ type: long
 
 format: bytes
 
-AOF current file size             
+AOF current file size
 
 
 --
@@ -23188,7 +23414,7 @@ Total size in bytes of the replication backlog buffer
 --
 type: long
 
-The master offset of the replication backlog buffer          
+The master offset of the replication backlog buffer
 
 
 --
@@ -26237,7 +26463,7 @@ The raid level of the device
 --
 type: keyword
 
-Current sync action, if the RAID array is redundant 
+Current sync action, if the RAID array is redundant
 
 
 --
@@ -26522,7 +26748,7 @@ type: integer
 
 format: bytes
 
-Memory used by TCP sockets in bytes, based on number of allocated pages and system page size. Corresponds to limits set in /proc/sys/net/ipv4/tcp_mem. Only available on Linux. 
+Memory used by TCP sockets in bytes, based on number of allocated pages and system page size. Corresponds to limits set in /proc/sys/net/ipv4/tcp_mem. Only available on Linux.
 
 
 --
@@ -26608,7 +26834,7 @@ type: integer
 
 format: bytes
 
-Memory used by UDP sockets in bytes, based on number of allocated pages and system page size. Corresponds to limits set in /proc/sys/net/ipv4/udp_mem. Only available on Linux. 
+Memory used by UDP sockets in bytes, based on number of allocated pages and system page size. Corresponds to limits set in /proc/sys/net/ipv4/udp_mem. Only available on Linux.
 
 
 --
