Cherry-pick #11982 to 7.0: Change type from scaled_float to long and add format (#11982) (#12158)
* Change type from scaled_float to long and add format (#11982)
(cherry picked from commit 1b2613eb6dc3b81bf6fd3c5141b4f9f7976953dd)
* Move changelog to Bugfixes

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -46,6 +46,7 @@ https://github.com/elastic/beats/compare/v7.0.0...7.0[Check the HEAD diff]
 *Metricbeat*
 
 - Update documentation with cloudwatch:ListMetrics permission. {pull}11987[11987]
+- Change some field type from scaled_float to long in aws module. {pull}11982[11982]
 
 *Packetbeat*
 
