--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -25959,12 +25959,34 @@ All TCP connections
 
 
 
+*`system.socket.summary.tcp.memory`*::
++
+--
+type: integer
+
+format: bytes
+
+Memory used by TCP sockets in bytes, based on number of allocated pages and system page size. Corresponds to limits set in /proc/sys/net/ipv4/tcp_mem. Only available on Linux. 
+
+
+--
+
 [float]
 == all fields
 
 All TCP connections
 
 
+
+*`system.socket.summary.tcp.all.orphan`*::
++
+--
+type: integer
+
+A count of all orphaned tcp sockets. Only available on Linux.
+
+
+--
 
 *`system.socket.summary.tcp.all.count`*::
 +
@@ -26022,6 +26044,18 @@ Number of TCP connections in _time_wait_ state
 All UDP connections
 
 
+
+*`system.socket.summary.udp.memory`*::
++
+--
+type: integer
+
+format: bytes
+
+Memory used by UDP sockets in bytes, based on number of allocated pages and system page size. Corresponds to limits set in /proc/sys/net/ipv4/udp_mem. Only available on Linux. 
+
+
+--
 
 [float]
 == all fields
