--- a/filebeat/docs/modules_list.asciidoc
+++ b/filebeat/docs/modules_list.asciidoc
@@ -27,6 +27,7 @@ This file is generated! See scripts/docs_collector.py
   * <<filebeat-module-rabbitmq>>
   * <<filebeat-module-redis>>
   * <<filebeat-module-santa>>
+  * <<filebeat-module-shorewall>>
   * <<filebeat-module-suricata>>
   * <<filebeat-module-system>>
   * <<filebeat-module-traefik>>
@@ -60,6 +61,7 @@ include::modules/postgresql.asciidoc[]
 include::modules/rabbitmq.asciidoc[]
 include::modules/redis.asciidoc[]
 include::modules/santa.asciidoc[]
+include::modules/shorewall.asciidoc[]
 include::modules/suricata.asciidoc[]
 include::modules/system.asciidoc[]
 include::modules/traefik.asciidoc[]
