--- a/libbeat/docs/outputconfig.asciidoc
+++ b/libbeat/docs/outputconfig.asciidoc
@@ -1145,7 +1145,11 @@ endif::[]
 
 ===== `bulk_max_size`
 
-The maximum number of events to bulk in a single Kafka request. The default is 2048.
+The "best effort" number of events to bulk in a single Kafka request. Works only when bulk_flush_frequency > 0; The default is 2048.
+
+===== `bulk_flush_frequency`
+
+Duration to wait before sending bulk Kafka request. 0 is no delay. The default is 0.
 
 ===== `timeout`
 
